--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,30 @@ body {
     text-wrap: balance;
   }
 }
+.animatedflashdown {
+  animation: flashdown 0.6s;
+}
+
+@keyframes flashdown{
+  0%{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+  }
+  100%{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0);
+  }
+}
+.dropintime {
+  animation: dropintime 0.9s;
+}
+@keyframes dropintime{
+  0%{
+    transform: translateY(-150%);
+  }
+  100%{
+    transform: translateY(0%);
+  }
+}
