--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,6 @@
+body{
+    scroll-behavior: auto;
+}
 .boxshadower {
     box-shadow: 0 20px 2px -2px linear-gradient(to right, #40e0d05b, #ffffff);
 }
@@ -16,5 +19,60 @@
     }
     100% {
         background-size: 100% 100%;
+    }
+}
+.boxbg{
+    background-color: hsl(232 30% 8%);
+}
+.background{
+    background-color: hsl(229 84% 3%);
+}
+.shinytop{
+    border-top: 1px solid;
+    border-image: linear-gradient(to right, #40e0d000, #40e0d00e, #55e0d270, #40e0d00e, #40e0d000) 1;
+    transition: all 0.5s;
+}
+.goldtop{
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-image: linear-gradient(to right, #40e0d000, #40e0d00e, #bbe05570, #40e0d00e, #40e0d000) 1;
+    transition: all 0.5s;
+}
+.goldtop:hover{
+    border-image: linear-gradient(to right, #40e0d000, #bbe05570, #bbe055, #bbe05570, #40e0d000) 1;
+    transition: all 0.5s;
+}
+.shinytop:hover{
+    border-image: linear-gradient(to right, #40e0d000, #55e0d270, #55e0d2, #55e0d270, #40e0d000) 1;
+    transition: all 0.5s;
+}
+.fulltopgradient{
+    background: linear-gradient(to top,hsl(232 30% 8%/ 1) 0,hsl(232 30% 8% / 0)),linear-gradient(45deg,#55e0d270 12%,#116852 34%,#2e0168 80%)
+}
+.contactafter:hover{
+    top: -1.5rem;
+    position: absolute;
+    transition: all 0.5s;
+    animation: textup 0.5s;
+}
+.contactafter:hover::after{
+    content: "Contact";
+    position: absolute;
+    left: 0rem;
+    opacity: 1;
+    top: 4.1rem;
+    transition: all 0.5s;
+    width: 100%;
+    height: 100%;
+}
+.gradiented{
+    background: linear-gradient(to top,#000000 0,#00000000),linear-gradient(85deg,#07476d 12%,#0a2366 34%,#32074b 80%)
+}
+@keyframes textup {
+    0% {
+        top: 0rem;
+    }
+    100% {
+        top: -1.5rem;
     }
 }
