Refactor background color in main.css

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,7 +22,7 @@ body{
     }
 }
 .boxbg{
-    background-color: hsl(232 30% 8%);
+    background-color: #0e101b;
 }
 .background{
     background-color: hsl(229 84% 3%);
