--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,6 +21,9 @@ body{
         background-size: 100% 100%;
     }
 }
+html {
+    scroll-behavior: smooth;
+  }
 .boxbg{
     background-color: #0e101b;
 }
